# Taazaa-All-Projects

./: .gitignore  README.md
MultimodelRagGemini/: .env.example  .gitignore  HANDOVER.md  README.md  docker-compose.yml  pyproject.toml  reset_and_reprocess.py
MultimodelRagGemini/Dataset/: RAG_TEST_MANIFEST.json
MultimodelRagGemini/Dataset/scattered/: ACT-2025-8724-AT.docx  ACT-2026-7298-CU.xlsx  AUD-2025-8264.docx  BRF-2026-8599.xlsx  CMP-2025-8846.xlsx  CMP-2026-2006-UP.xlsx  CMP-2026-4201.xlsx  CMP-2026-7951.docx  CTR-2025-1019-BV.xlsx  CTR-2026-8344-YL.docx  FIN-2025-6148.xlsx  INT-2025-8622-JV.docx  INV-2025-4291-GT.xlsx  INV-2025-4538.docx  INV-2025-8046.docx  INV-2026-1981.xlsx  LOG-2025-1753.docx  MTG-2025-8847-MN.docx  PRJ-2026-1548.xlsx  PRJ-2026-2282.xlsx  RPT-2026-8222.docx  STR-2025-1721.xlsx  STR-2026-8500.xlsx  SUM-2025-3241.xlsx  SUM-2026-3877-GE.docx  TKT-2025-9153.docx  TKT-2026-7744.xlsx  TSK-2025-1828.docx  TSK-2026-4588-UG.docx
MultimodelRagGemini/agents/geminirag/: __init__.py  agent.py
MultimodelRagGemini/alembic/: env.py
MultimodelRagGemini/alembic/versions/: 0001_initial_tables.py  0002_add_partial_job_status.py
MultimodelRagGemini/app/: config.py  llm_provider.py  main.py  security.py
MultimodelRagGemini/app/agent/: adk_agent.py  agent.py  tools.py
MultimodelRagGemini/app/api/: admin.py  agent.py  auth.py  documents.py  files.py  jobs.py  query.py
MultimodelRagGemini/app/evaluation/: ragas_eval.py
MultimodelRagGemini/app/models/: db.py
MultimodelRagGemini/app/observability/: logging.py
MultimodelRagGemini/app/processors/: audio.py  audio_utils.py  base.py  docx_proc.py  image.py  pdf.py  video.py  xlsx_proc.py
MultimodelRagGemini/app/rag/: bm25_index.py  chunker.py  embedder.py  engine.py  reranker.py  vectorstore.py
MultimodelRagGemini/app/workers/: tasks.py
MultimodelRagGemini/docs/: ragas_baseline.json
MultimodelRagGemini/frontend/src/: App.tsx  index.css
MultimodelRagGemini/scripts/: bulk_upload_local.py  bulk_upload_to_cloud.py  check_budget.py  check_chroma.py  check_chroma_direct.py  check_ragas_base.py  check_ragas_collections_eval.py  check_ragas_direct_score.py  check_ragas_embeddings.py  check_ragas_hf_emb.py  check_ragas_metrics.py  check_ragas_providers.py  check_scores.py  check_spend.py  debug_job.py  debug_xlsx.py  download_ragas_datasets.py  flush_queue.py  inspect_jobs.py  list_groq_models.py  nlp_demo.py  poll_jobs.py  process_dataset.py  process_pdfs.py  ragas_baseline.py  ragas_regression_check.py  reembed_all.py  requeue_pending.py  reset_failed.py  run_pipeline_test.py  seed_admin.py  seed_ragas_scores.py  show_errors.py  start_chromadb.py  status_check.py  test_day3.py  test_day4.py  test_day5.py  test_rag_queries.py  verify_xlsx_in_worker.py
MultimodelRagGemini/tests/: conftest.py  test_agent.py  test_api.py  test_processors.py  test_query.py  test_rag.py  test_tasks_429.py
MultimodelRagGroq/: .env.example  Dockerfile  README.md  codebase.md  entrypoint.sh  pyproject.toml  supervisord.conf
MultimodelRagGroq/Dataset/scattered/: ACT-2025-4846.docx  ACT-2025-7248-SL.docx  ACT-2026-5723.xlsx  ACT-2026-7992.xlsx  AUD-2025-1678.xlsx  AUD-2025-6304.docx  BRF-2025-7266-LF.xlsx  CMP-2025-2332.xlsx  CMP-2026-6890.xlsx  CMP-2026-7743.xlsx  CTR-2026-3042.xlsx  CTR-2026-3430.docx  FIN-2026-3977.xlsx  FIN-2026-7689.docx  INT-2025-8451-LV.docx  INV-2026-3531.docx  NTS-2025-8587.xlsx  NTS-2026-8894-ZJ.docx  NTS-2026-9574.xlsx  PRJ-2025-2038.xlsx  QBR-2025-7511.docx  QBR-2025-9702-NS.docx  QBR-2025-9850.docx  REV-2025-8110-DY.docx  REV-2026-8085-NB.xlsx  RPT-2026-5520.docx  STR-2025-1710-XZ.docx  STR-2025-4956.xlsx  TKT-2026-1132-SV.docx  TKT-2026-4496.xlsx  TKT-2026-8433.docx
MultimodelRagGroq/alembic/: env.py
MultimodelRagGroq/app/: config.py  deps.py  limiter.py  llm_provider.py  main.py
MultimodelRagGroq/app/agent/: adk_agent.py  (+1 more)
MultimodelRagGroq/docs/: ragas_baseline.json
MultimodelRagGroq/frontend/: index.html  package-lock.json  package.json
MultimodelRagGroq/scripts/: bulk_upload_to_cloud.py  check_chroma.py  check_chroma_direct.py  check_ragas_base.py  check_ragas_collections_eval.py  check_ragas_direct_score.py  check_ragas_embeddings.py  check_ragas_hf_emb.py  check_ragas_metrics.py  check_ragas_providers.py  check_scores.py  debug_job.py  debug_xlsx.py  download_ragas_datasets.py  flush_queue.py  inspect_jobs.py  list_groq_models.py  nlp_demo.py  poll_jobs.py  process_dataset.py  process_pdfs.py  ragas_baseline.py  ragas_regression_check.py  requeue_pending.py  reset_failed.py  run_pipeline_test.py  seed_admin.py  seed_ragas_scores.py  show_errors.py  start_chromadb.py  status_check.py  test_day3.py  test_day4.py  test_day5.py  test_rag_queries.py  verify_xlsx_in_worker.py
MultimodelRagGroq/tests/: conftest.py  test_agent.py  test_api.py  test_processors.py  test_query.py  test_rag.py  test_tasks_429.py
(+101 files in other folders)
